overflow-x-bugs-fix(II)

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -49,7 +49,7 @@ body
         align-items: center;
         flex-direction: column;
         text-align: center;
-        transform: translateY(-150%);
+        transform: translateX(100%);
     }
 
     .nav-links li
@@ -136,12 +136,12 @@ body
     from 
     {
         opacity: 0;
-        transform: translateY(-50%);
+        transform: translateX(50%);
     }    
     to
     {
         opacity: 1;
-        transform: translateY(0%);
+        transform: translateX(0%);
     }
 }
 
@@ -150,12 +150,12 @@ body
     from 
     {
         opacity: 1;
-        transform: translateY(0%);
+        transform: translateX(0%);
     }    
     to
     {
         opacity: 0;
-        transform: translateY(-50%);
+        transform: translateX(50%);
     }
 }
 
