--- a/sass/top-mid.scss
+++ b/sass/top-mid.scss
@@ -7,7 +7,6 @@
     z-index: 0;
     height: 550px;
     width: 100%;
-    overflow-x: hidden;
     background-color: rgba($color: black, $alpha: .3);
     // background: #BBD2C5;  /* fallback for old browsers */
     // background: -webkit-linear-gradient(to right, #536976, #BBD2C5);  /* Chrome 10-25, Safari 5.1-6 */
